[package]
name = 'ezgl'
version = '0.2.0'
edition = '2021'

[package.metadata.docs.rs]
features = ['winit']

[dependencies]
glutin = { version = '0.31.3', features = ['wgl'] }
glow = '0.13.1'
raw-window-handle = '0.5.2'
winit = { version = '0.29.10', optional = true, features = ['rwh_05'] }

[features]
default = ['winit']
winit = ['dep:winit']

[dev-dependencies]
winit = '0.29.10'
env_logger = '*'
log = '*'
